--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>8.0</LangVersion>
+        <PackageId>NWN.Core</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>jorte</Authors>
+        <Company>NWNDotnet</Company>
+        <PackageTags>Neverwinter Nights;NWN;</PackageTags>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
-
 </Project>
