cleanup and bump to 1.0.1

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,3 +14,4 @@ jobs:
         uses: rohith/publish-nuget@v2
         with:
           PROJECT_FILE_PATH: NWN.Core.csproj
+          NUGET_KEY: ${{secrets.NUGET_KEY}}
