--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8.0</LangVersion>
+        <Nullable>enable</Nullable>
         <PackageId>NWN.Core</PackageId>
         <Version>1.0.1</Version>
         <Authors>jorte</Authors>
