csproj, version bump.
versionsrhard

--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -2,8 +2,9 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8.0</LangVersion>
+        <Nullable>enable</Nullable>
         <PackageId>NWN.Core</PackageId>
-        <Version>1.0.1</Version>
+        <Version>1.0.2</Version>
         <Authors>jorte</Authors>
         <Company>NWNDotnet</Company>
         <PackageTags>Neverwinter Nights;NWN;</PackageTags>
