--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,7 +60,7 @@ jobs:
         uses: actions/upload-artifact@v1.0.0
         with:
           name: NWN.Core
-          path: src/output
+          path: output
 
       - name: Push to Nuget.org
         if: ${{ github.event_name == 'push' }}
