cleanup whitespace, and add descriptors to nuget package.

--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -7,6 +7,8 @@
         <Authors>jorte</Authors>
         <Company>NWNDotnet</Company>
         <PackageTags>Neverwinter Nights;NWN;</PackageTags>
+        <RepositoryUrl>https://github.com/nwn-dotnet/NWN.Core</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <RootNamespace>NWN</RootNamespace>
     </PropertyGroup>
