--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -2,11 +2,13 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8.0</LangVersion>
-        <Nullable>enable</Nullable>
         <PackageId>NWN.Core</PackageId>
-        <Authors>jorte</Authors>
-        <Company>NWNDotnet</Company>
+        <Authors>NWN-dotnet</Authors>
         <PackageTags>Neverwinter Nights;NWN;</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <RepositoryUrl>https://github.com/nwn-dotnet/NWN.Core</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
