--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -3,7 +3,9 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8.0</LangVersion>
         <PackageId>NWN.Core</PackageId>
+        <RootNamespace>NWN</RootNamespace>
         <Authors>NWN-dotnet</Authors>
+        <Nullable>enable</Nullable>
         <PackageTags>Neverwinter Nights;NWN;</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -12,6 +14,10 @@
         <RepositoryUrl>https://github.com/nwn-dotnet/NWN.Core</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <RootNamespace>NWN</RootNamespace>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="$(MicrosoftSourceLinkGitHubPackageVersion)" PrivateAssets="All" />
+    </ItemGroup>
 </Project>
