--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -15,6 +15,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <NoWarn>1591</NoWarn>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.SourceLink.GitHub" Version="$(MicrosoftSourceLinkGitHubPackageVersion)" PrivateAssets="All" />
