--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -18,6 +18,6 @@
         <NoWarn>1591</NoWarn>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="$(MicrosoftSourceLinkGitHubPackageVersion)" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     </ItemGroup>
 </Project>
