Restore master config.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@
 on:
   push:
     branches:
-      - environment-files
+      - master
 
 jobs:
   build:
@@ -35,3 +35,6 @@ jobs:
 
       - name: Pack
         run: dotnet pack NWN.Core.csproj --configuration Release -p:PackageVersion=${{ steps.name_version.outputs.version }} -o output
+
+      - name: Publish Package
+        run: dotnet nuget push output/*.nupkg --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
