--- a/.github/workflows/update-nwscript-nss.yml
+++ b/.github/workflows/update-nwscript-nss.yml
@@ -15,7 +15,7 @@ jobs:
       - name: pull latest nwscript.nss
         run: |
           wget https://raw.githubusercontent.com/urothis/nwn-assets/main/key-file/pkg5.bif/nwscript.nss
-          mkdir ${GITHUB_WORKSPACE}/src/test
+          mkdir ${GITHUB_WORKSPACE}/src/test/
           ls ${GITHUB_WORKSPACE}/src/
           dotnet /app/Nss2CSharp.dll ./nwscript.nss ${GITHUB_WORKSPACE}/src/test/
           ls ${GITHUB_WORKSPACE}/src/test
