Revert trigger to schedule.

--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -1,9 +1,8 @@
 name: Update API Bindings
 
 on:
-  push:
-    branches:
-      - api-auto-update
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   build:
