--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - master
+  workflow_run:
+    workflows: ["Update API Bindings"]
+    branches: ["master"]
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
