--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -47,10 +47,20 @@ jobs:
             exit 1
           fi
 
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 5.0.100
+
+      - name: Test Build
+        run: |
+          cd ${GITHUB_WORKSPACE}/repo
+          dotnet build --configuration Release
+
       - name: Commit Changes
         run: |
           cd ${GITHUB_WORKSPACE}/repo
           git config user.name Jorteck
           git config user.email jorteckdev@gmail.com
           git add -A src/NWN/NWScript.cs src/NWNX/Plugins/*
-          git diff-index --quiet HEAD || git commit -m "Update APIs (NWNX: ${{ steps.revision.outputs.nwnx_sha_short }}, NWN: ${{ steps.revision.outputs.nwn_sha_short }})." && git push
+          git diff-index --quiet HEAD src/NWN/NWScript.cs src/NWNX/Plugins/* || git commit -m "Update APIs (NWNX: ${{ steps.revision.outputs.nwnx_sha_short }}, NWN: ${{ steps.revision.outputs.nwn_sha_short }})." && git push
