--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -20,4 +20,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     </ItemGroup>
+    <ItemGroup>
+      <Compile Remove="src\NWNX\Plugins\TimePlugin.cs" />
+    </ItemGroup>
 </Project>
