--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
         run: echo ::set-output name=version::$(echo ${{ steps.bump_version.outputs.tag }} | sed 's/[v]//g')
 
       - name: Pack
-        run: dotnet pack NWN.Core.csproj --configuration Release -p:PackageVersion=${{ steps.name_version.outputs.version }} -o output
+        run: dotnet pack NWN.Core.csproj --configuration Release -p:Version=${{ steps.name_version.outputs.version }} -o output
 
       - name: NuGet Publish
         run: dotnet nuget push output/*.nupkg --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
