[skip ci] Fix file path.

--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -24,6 +24,8 @@ jobs:
       - name: Load Environment Info
         id: "dotenv"
         uses: falti/dotenv-action@v0.2.6
+        with:
+          path: "./repo/.env"
 
       - name: Load Revisions
         id: "revision"
