--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -58,13 +58,13 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.102
+          dotnet-version: 6.0.x
 
       - name: Test Build
         run: |
           cd ${GITHUB_WORKSPACE}/repo
           dotnet build --configuration Release
-      
+
       - name: Load Game Version
         id: "version"
         run: |
