--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
         <LangVersion>10.0</LangVersion>
         <PackageId>NWN.Core</PackageId>
         <Authors>NWN-dotnet</Authors>
