--- a/NWN.Core.csproj
+++ b/NWN.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
         <PackageId>NWN.Core</PackageId>
         <Authors>NWN-dotnet</Authors>
         <Nullable>enable</Nullable>
