--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.100
+          dotnet-version: '6.0.x'
 
       - name: Build
         run: dotnet build --configuration Release
@@ -38,11 +38,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-    
+
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.100
+          dotnet-version: '6.0.x'
 
       - name: Version and Tag
         id: bump_version
@@ -61,7 +61,7 @@ jobs:
       - name: Build Release Binaries
         id: build
         run: dotnet build --configuration Release -p:Version=${{ steps.vars.outputs.version }} -o output
-       
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v2
         with:
@@ -77,7 +77,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.100
+          dotnet-version: '6.0.x'
 
       - name: Download Release Artifacts
         uses: actions/download-artifact@v2
@@ -87,6 +87,6 @@ jobs:
 
       - name: NuGet Publish
         run: dotnet nuget push output/*.nupkg --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
-        
+
       - name: GitHub Publish
         run: dotnet nuget push output/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/nwn-dotnet/index.json
