[skip ci] Add preview branch for CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - main
+      - preview
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
       - main
+      - preview
     paths-ignore:
       - '**.md'
   workflow_dispatch:
