[skip ci] Update author.

--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -121,8 +121,8 @@ jobs:
       - name: Commit Changes
         run: |
           cd ${GITHUB_WORKSPACE}/repo
-          git config user.name Jorteck
-          git config user.email jorteckdev@gmail.com
+          git config user.name jhett12321
+          git config user.email 10942655+jhett12321@users.noreply.github.com
           git add -A src/NWN/NWScript.cs src/NWNX/Plugins/
           git diff-index --quiet HEAD src/NWN/NWScript.cs src/NWNX/Plugins/ ||
           git commit -m "Update APIs (NWNX: ${{ needs.download.outputs.nwnx_sha_short }}, NWN: ${{ needs.download.outputs.nwn_build }}.${{ needs.download.outputs.nwn_build_revision }}-${{ needs.download.outputs.nwn_build_postfix }})." &&
